Webサービス　DBと接続

--- a/render.yml
+++ b/render.yml
@@ -6,7 +6,7 @@ databases:
 
 services:
   - type: web
-    name: melody Map
+    name: melody_Map
     env: ruby
     region: singapore
     plan: free
