--- a/render.yml
+++ b/render.yml
@@ -1,12 +1,12 @@
 databases:
-  - name: Melody-Map_DB
+  - name: Melody_Map_DB
     databaseName: melody_map_db
-    user: Melody Map
+    user: Melody_Map
     region: singapore
 
 services:
   - type: web
-    name: melody_Map
+    name: Melody_Map
     env: ruby
     region: singapore
     plan: free
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: Melody-Map_DB
+          name: Melody_Map_DB
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
