--- a/render.yml
+++ b/render.yml
@@ -1,6 +1,6 @@
 databases:
-  - name: Melody Map_DB
-    databaseName: melody map_db
+  - name: Melody-Map_DB
+    databaseName: melody-map_db
     user: Melody Map
     region: singapore
 
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: Melody Map_DB
+          name: Melody-Map_DB
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
