--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
-    "webpack-dev-server": "^3"
+    "webpack-dev-server": "^3",
+    "@babel/core": "^7.15.0",
+    "babel-loader": "^8.2.2"
   }
 }
